2009-06-08  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#120492 - Unparented animation actors are displayed.
	
	* src/home/hd-render-manager.c: Added hd_render_manager_should_hide
	which checks MBWMCompMgrClutterClientDontShow. This is then used
	when setting visibility of actors.

2009-06-08  Laszlo Pere  <lpere@blumsoft.eu>
	NB#120612 Unwanted activation of the task launcher/switcher button

	* src/home/hd-switcher.c: Handling the 'pressed' state for the button.

2009-06-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.52

2009-06-08  Laszlo Pere  <lpere@blumsoft.eu>

	NB#120955 Memory leaks in window manager.

	* src/launcher/hd-launcher-tree.c: The last leak of the bug report has 
	  been fixed by calling the g_key_file_free() function.

2009-06-05  Laszlo Pere  <lpere@blumsoft.eu>

	NB#119709 Device freezes if camera lens cover is opened while in 
	          change background image dialog

	* src/home/hd-home.c: When removing removing hd-home dialogs remove
	  the transients of the hd-home dialogs too.

2009-06-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120571 ROTATION: Call idle view is not completely Displayed
		  in certain scenario
	NB#120066 ROTATION: Cannot go back to home view after closing
		  phone application

	When the layout manager requests new geometry in portrait mode
	do not touch clients which don't support it, but reconfigure
	all other.  This way we don't resize clients that needn't be
	but resize the ones that need to be.

	* src/mb/hd-comp-mgr.h (hd_comp_mgr_is_portrait):
	  New utility function.  Oh, sorry, typesafe macro.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_supports_portrait):
	  New utility function.
	* src/util/hd-transition.c:
	  Replace get_current_screen_width/height() with is_portrait().
	* src/mb/hd-app.c (hd_app_request_geometry):
	  Ignore the layout manager's request if we're in portrait
	  but the client doesn't support it.  When we leave portrait